# advent2024

./: advent2024.opam  dune-project
d1/: d1.ml  dune
d10/: dune  main.ml
d11/: dune  main.ml
d12/: dune  main.ml
d13/: dune  main.ml
d14/: README.md  dune  main.ml
d15/: dune  main.ml
d16/: dune  main.ml
d17/: dune  main.ml
d18/: dune  main.ml
d19/: dune  main.ml
d2/: dune  main.ml
d20/: dune  main.ml
d21/: dune  main.ml
d22/: dune  main.ml
d23/: dune  main.ml
d24/: dune  main.ml
d25/: dune  main.ml
d3/: dune  main.ml
d4/: dune  main.ml
d5/: dune  main.ml
d6/: dune  main.ml
d7/: dune  main.ml
d8/: dune  main.ml
d9/: dune  main.ml
inputs/: d17.txt
lib/: common.ml  dune
results/: day14.txt
