(lang dune 3.16)

(name advent2024)

(generate_opam_files true)

(source
 (github Jamie-Chang/advent2024))

(authors "Jamie Chang")

(maintainers "Jamie Chang")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name advent2024)
 (synopsis "Advent of Code 2024")
 (description "Advent of Code 2024 in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
